fix: add subtitle rendering to SettingsCard component for improved UI clarity

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -21,6 +21,8 @@
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-disclaimer-detailed": "KI-extrahierte Referenzen können Fehler enthalten und zwischen Extraktionen variieren, was die Matching-Ergebnisse beeinflussen kann. Bitte prüfen Sie die Genauigkeit, bevor Sie sie in wissenschaftlichen Arbeiten verwenden.",
   "ai-extraction": "KI-Extraktion",
+  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann. Die Extraktionsdauer hängt von der Textlänge und dem gewählten KI-Modell/Anbieter ab.",
+  "ai-extraction-mode-title": "KI-Extraktions-Modus",
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell, das für die Extraktion verwendet werden soll.",
   "ai-models": {
@@ -36,6 +38,7 @@
     "gpt-5-mini": "GPT-5 Mini",
     "gpt-5-nano": "GPT-5 Nano"
   },
+  "ai-placeholder-example": "Beispiel (KI kann aus verschiedenen Formaten extrahieren)",
   "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der Anbieter-Plattform erhalten:",
   "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
   "ai-settings-api-key-help-google": "Sie können Ihren Google AI API-Schlüssel von AI Studio erhalten:",
@@ -219,6 +222,7 @@
   "enable-fuzzy-matching": "Fuzzy-Matching aktivieren",
   "enable-fuzzy-matching-description": "Ungefähren Zeichenkettenabgleich für erhöhte Toleranz erlauben",
   "enable-fuzzy-matching-example": "\"Smith\" kann zu \"Smyth\" oder \"Smithe\" passen",
+  "enabled-databases": "",
   "english": "Englisch",
   "enter-dois": "Bitte geben Sie DOIs ein, einen Text mit DOIs oder importieren Sie eine PDF-Datei mit DOIs, um diese zu validieren",
   "enter-references": "Bitte geben Sie einen Text ein oder importieren Sie eine PDF-Datei mit Referenzen, um diese zu überprüfen",
@@ -251,28 +255,29 @@
   "exact-match-threshold-example": "95% = Bewertungen 95-100% werden als grüne exakte Übereinstimmungen angezeigt",
   "exact-match-tooltip": "Exakte Übereinstimmungen (100%)",
   "example": "Beispiel",
-  "ai-placeholder-example": "Beispiel (KI kann aus verschiedenen Formaten extrahieren)",
-  "parse-placeholder-example": "Beispiel (nur strukturierte Referenzen)",
   "example-explanation": "In diesem Beispiel konzentriert sich die Verifizierung zu 50 % auf Titel-Ähnlichkeit, zu 30 % auf DOI-Übereinstimmung und zu 20   % auf Autoren-Ähnlichkeit. Alle anderen Felder (Jahr, Zeitschrift, Seiten, etc.) werden ignoriert.",
   "example-scenario": "Sie möchten sich nur auf Titel- und DOI-Abgleich konzentrieren und alle anderen Felder ignorieren",
   "executive-producer": "Ausführender Produzent",
   "expert-settings": "Experteneinstellungen",
   "expert-settings-description": "Erweiterte Verifizierungseinstellungen und Feldgewichtungen für Metadaten-Abgleich konfigurieren",
   "extract": "Extrahieren",
-  "extract-references": "Referenzen extrahieren",
   "extract-and-verify": "Extrahieren & Verifizieren",
-  "extracting-and-verifying": "Extrahiere & Verifiziere",
-  "input-references-for-ai-extraction": "Referenzen für KI-gestützte Extraktion und Verifizierung eingeben",
-  "input-references-for-ai-extraction-only": "Referenzen oder Dateien für KI-gestützte Extraktion eingeben",
-  "input-references-as-text-only": "Referenzen oder Dateien für Parsing eingeben",
-  "input-references-or-files": "Referenzen oder Dateien eingeben",
-  "extracting": "Extrahiere",
+  "extract-references": "Referenzen extrahieren",
   "extracted": "Extrahiert",
+  "extracting": "Extrahiere",
+  "extracting-and-verifying": "Extrahiere & Verifiziere",
   "extracting-dois": "Extrahiere DOIs",
   "extracting-dois-description": "Extrahiere DOIs aus dem Text. Bitte warten...",
   "extracting-references": "Extrahiere Referenzen...",
   "extracting-references-description": "Extrahiere Referenzen aus dem Text...",
   "extraction-academic-information": "Akademische Informationen",
+  "extraction-ai-description": "Steuern Sie, ob KI-gestützte Extraktion für bessere Genauigkeit verwendet werden soll",
+  "extraction-ai-disabled-description": "Nur regelbasierte Analyse verwenden - kann bei komplexen Referenzen weniger genau sein",
+  "extraction-ai-enabled": "KI für Extraktion verwenden",
+  "extraction-ai-enabled-description": "KI wird verwendet, um bibliografische Metadaten intelligent aus Dokumenten zu extrahieren und zu strukturieren",
+  "extraction-ai-fallback-info": "Wenn KI deaktiviert ist, verwendet das System traditionelle Parsing-Methoden. Dies kann zu weniger genauer Extraktion bei komplexen oder schlecht formatierten Referenzen führen.",
+  "extraction-ai-no-api-key-description": "KI-Extraktion erfordert einen API-Schlüssel - konfigurieren Sie ihn in den KI-Einstellungen",
+  "extraction-ai-title": "KI-Extraktion",
   "extraction-core-metadata": "Kern-Metadaten",
   "extraction-date-information": "Datums-Informationen",
   "extraction-deselect-all": "Alle abwählen",
@@ -331,17 +336,7 @@
   "extraction-publication-details": "Publikations-Details",
   "extraction-select-all": "Alle auswählen",
   "extraction-settings": "Extraktions-Einstellungen",
-  "extraction-settings-description": "Konfiguriere den Extraktionsmodus und wähle die Metadatenfelder aus, die bei der Dokumentenverarbeitung extrahiert werden sollen",
-  "search-settings": "Such-Einstellungen",
-  "search-settings-description": "Konfiguriere das Suchverhalten und die Prioritäten der Datenbanken für die Referenzverifikation",
-  "search-settings-title": "Such-Einstellungen",
-  "extraction-ai-title": "KI-Extraktion",
-  "extraction-ai-description": "Steuern Sie, ob KI-gestützte Extraktion für bessere Genauigkeit verwendet werden soll",
-  "extraction-ai-enabled": "KI für Extraktion verwenden",
-  "extraction-ai-enabled-description": "KI wird verwendet, um bibliografische Metadaten intelligent aus Dokumenten zu extrahieren und zu strukturieren",
-  "extraction-ai-disabled-description": "Nur regelbasierte Analyse verwenden - kann bei komplexen Referenzen weniger genau sein",
-  "extraction-ai-no-api-key-description": "KI-Extraktion erfordert einen API-Schlüssel - konfigurieren Sie ihn in den KI-Einstellungen",
-  "extraction-ai-fallback-info": "Wenn KI deaktiviert ist, verwendet das System traditionelle Parsing-Methoden. Dies kann zu weniger genauer Extraktion bei komplexen oder schlecht formatierten Referenzen führen.",
+  "extraction-settings-description": "Konfiguriere den Extraktionsmodus und wähle die Metadatenfelder aus, die extrahiert werden sollen",
   "extraction-technical-details": "Technische Details",
   "extractionSettings": {
     "description": "Feld-Auswahl",
@@ -450,6 +445,7 @@
   "field-yearEnd": "Jahr Ende",
   "field-yearSuffix": "Jahr-Suffix",
   "fields": "Felder",
+  "file-input-disabled-parse-mode": "Datei-Upload ist nur im KI-Extraktions-Modus verfügbar. Wechseln Sie zum KI-Modus, um PDF-Dateien hochzuladen.",
   "first-reference-note-number": "Erste Referenznotennummer",
   "flag-problematic": "Als problematisch markieren",
   "flag-problematic-tooltip": "Diese Referenz als möglicherweise problematisch kennzeichnen",
@@ -499,7 +495,11 @@
   "import-pdf-or-add-references": "Importiere eine PDF-Datei oder füge Referenzen direkt in das Textfeld ein, um die Überprüfung zu starten.",
   "in-press": "Im Druck",
   "in-press-indicator": "im Druck",
+  "input-references-as-text-only": "Referenzen oder Dateien für Parsing eingeben",
   "input-references-as-text-or-upload-a-file": "Referenzen als Text eingeben oder eine Datei hochladen",
+  "input-references-for-ai-extraction": "Referenzen für KI-gestützte Extraktion und Verifizierung eingeben",
+  "input-references-for-ai-extraction-only": "Referenzen oder Dateien für KI-gestützte Extraktion eingeben",
+  "input-references-or-files": "Referenzen oder Dateien eingeben",
   "input-required": "Eingabe erforderlich",
   "insert-references": "Text mit Referenzen eingeben...",
   "institution": "Institution",
@@ -550,11 +550,11 @@
   "matching-allow-page-variations": "Seitenformat-Variationen erlauben",
   "matching-enable-fuzzy": "Fuzzy-Matching aktivieren",
   "matching-enable-fuzzy-description": "Erlaubt ungefähre String-Übereinstimmungen für Textfelder",
+  "matching-fields-last-field-tooltip": "Mindestens ein Abgleichsfeld muss mit 100% Gewichtung aktiviert bleiben",
   "matching-format-variations-title": "Formatvariationen",
   "matching-fuzzy-settings": "Fuzzy-Matching",
   "matching-fuzzy-threshold": "Fuzzy-Matching-Sensitivität",
   "matching-fuzzy-threshold-description": "Höhere Werte = strengeres unscharfes Abgleichen (0.1-1.0)",
-  "matching-fields-last-field-tooltip": "Mindestens ein Abgleichsfeld muss mit 100% Gewichtung aktiviert bleiben",
   "matching-ignore-case": "Groß-/Kleinschreibung ignorieren",
   "matching-ignore-punctuation": "Satzzeichenunterschiede ignorieren",
   "matching-ignore-whitespace": "Leerzeichenunterschiede ignorieren",
@@ -715,16 +715,11 @@
   "pages-match": "Seiten-Übereinstimmung",
   "paragraph-number": "Absatznummer",
   "parse": "Parsen",
+  "parse-mode-description": "Fügen Sie Ihre Bibliographie oder Referenzliste in das Textfeld unten ein. Für beste Ergebnisse sollte jede Referenz in einer eigenen Zeile stehen. Der Parser überspringt automatisch leere Zeilen und verarbeitet strukturierte Zitate.",
+  "parse-mode-title": "Parse-Modus",
+  "parse-placeholder-example": "Beispiel (nur strukturierte Referenzen)",
   "parse-references": "Referenzen parsen",
   "parsing": "Parse",
-  "parse-mode-title": "Parse-Modus",
-  "parse-mode-description": "Fügen Sie Ihre Bibliographie oder Referenzliste in das Textfeld unten ein. Für beste Ergebnisse sollte jede Referenz in einer eigenen Zeile stehen. Der Parser überspringt automatisch leere Zeilen und verarbeitet strukturierte Zitate.",
-  "ai-extraction-mode-title": "KI-Extraktions-Modus",
-  "ai-extraction-mode-description": "Freitext-Eingabe und unstrukturierte Eingabe ist möglich, da die KI Referenzen automatisch aus jedem Textformat erkennen und extrahieren kann. Die Extraktionsdauer hängt von der Textlänge und dem gewählten KI-Modell/Anbieter ab.",
-  "file-input-disabled-parse-mode": "Datei-Upload ist nur im KI-Extraktions-Modus verfügbar. Wechseln Sie zum KI-Modus, um PDF-Dateien hochzuladen.",
-  "training-data-only-parsed-references": "Der Token-Editor ist nur für geparste Referenzen verfügbar. Parsen Sie Referenzen, um Token-Labeling und -Bearbeitung zu aktivieren.",
-  "token-editor-help-title": "So verwenden Sie den Token-Editor",
-  "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben. Ihre Korrekturen helfen dabei, das Parser-Modell für alle zu verbessern.",
   "part": "Teil",
   "part-title": "Teiltitel",
   "partial-verification": "{verified}/{total} verifiziert ({percentage} %)",
@@ -741,6 +736,9 @@
   "possible-match-tooltip": "Mögliche Übereinstimmungen ({possibleThreshold}-{strongThreshold}%)",
   "practical-example": "Praktisches Beispiel",
   "printing": "Auflage",
+  "priority": "Priorität",
+  "processing": "verarbeitet",
+  "processing-references-tooltip": "Referenzen werden gerade gegen akademische Datenbanken verifiziert",
   "producer": "Produzent",
   "provider": "Anbieter",
   "publication-date": "Publikationsdatum",
@@ -762,6 +760,7 @@
   "reference-score-title": "Beste Übereinstimmung",
   "references": "Referenzen",
   "references-count": "{count} Referenzen",
+  "references-processed": "Referenzen verarbeitet",
   "registered": "Registriert",
   "reload-page-auto-import": "Seite neu laden, um Referenzen automatisch zu finden und zu importieren",
   "remove-file-to-enable-text-input": "Datei entfernen, um die Texteingabe zu aktivieren",
@@ -775,8 +774,8 @@
   "restart-verification": "Überprüfung neu starten",
   "retrieval-date": "Abrufdatum",
   "retry": "Wiederholen",
-  "review-and-relabel-parsed-references-by-clicking-on-tokens": "Geparste Referenzen überprüfen und durch Klicken auf Tokens neu beschriften",
   "review-and-relabel-parsed-references": "Geparste Referenzen überprüfen und neu beschriften",
+  "review-and-relabel-parsed-references-by-clicking-on-tokens": "Geparste Referenzen überprüfen und durch Klicken auf Tokens neu beschriften",
   "reviewed-author": "Rezensierter Autor",
   "reviewed-genre": "Rezensiertes Genre",
   "reviewed-title": "Rezensierter Titel",
@@ -793,6 +792,9 @@
   "search-on-web": "Im Internet nach dieser Referenz suchen",
   "search-on-web-tooltip": "Im Internet nach dieser Referenz suchen",
   "search-references": "Referenzen suchen",
+  "search-settings": "Such-Einstellungen",
+  "search-settings-description": "Konfiguriere das Suchverhalten und die Prioritäten der Datenbanken für die Referenzverifikation",
+  "search-settings-title": "Such-Einstellungen",
   "season": "Jahreszeit",
   "sec": "s",
   "section": "Abschnitt",
@@ -951,6 +953,8 @@
   "title": "Titel",
   "title-match": "Titel-Übereinstimmung",
   "title-short": "Titel (Kurz)",
+  "token-editor-help-description": "Der Parser segmentiert Ihre Referenzen automatisch (Autor, Titel, etc.) mithilfe von maschinellem Lernen. Überprüfen Sie jedes Segment sorgfältig und korrigieren Sie Fehler, indem Sie auf Tokens klicken und das richtige Label aus der Dropdown-Liste auswählen. Kombinieren Sie verwandte Tokens - zum Beispiel gehört 'in' meist zu Editor oder Zeitschriftennamen. Für beste Ergebnisse muss jeder Token ein Label haben. Ihre Korrekturen helfen dabei, das Parser-Modell für alle zu verbessern.",
+  "token-editor-help-title": "So verwenden Sie den Token-Editor",
   "token-relabeling": {
     "changeLabelFor": "Label ändern für",
     "changesCount": "Vorgenommene Änderungen",
@@ -965,12 +969,12 @@
   },
   "tokens-per-minute": "Token pro Minute",
   "tokens-per-minute-description": "Dies ist das Limit der KI-Token pro Minute",
-  "tooltip-ai-turn-off": "KI-Extraktion deaktivieren",
-  "tooltip-ai-turn-on": "KI-Extraktion aktivieren",
-  "tooltip-ai-no-api-key": "KI-Extraktion nicht verfügbar - API-Schlüssel erforderlich",
   "tooltip-abstract": "Kurze Zusammenfassung des Inhalts der Publikation (z.B. 'This study examines...')",
   "tooltip-accepted": "Datum, an dem das Manuskript zur Veröffentlichung angenommen wurde (z.B. '2024-03-15')",
   "tooltip-advisor": "Akademischer Betreuer oder Supervisor (z.B. 'Prof. Dr. Schmidt')",
+  "tooltip-ai-no-api-key": "KI-Extraktion nicht verfügbar - API-Schlüssel erforderlich",
+  "tooltip-ai-turn-off": "KI-Extraktion deaktivieren",
+  "tooltip-ai-turn-on": "KI-Extraktion aktivieren",
   "tooltip-approximateDate": "Ungefähres Publikationsdatum (z.B. 'ca. 2023')",
   "tooltip-articleNumber": "Eindeutige Artikelnummer (z.B. 'e2024001' bei elektronischen Zeitschriften)",
   "tooltip-arxiv-id": "arXiv-Identifikator für Preprints und wissenschaftliche Arbeiten (z.B. '2024.01234')",
@@ -1064,6 +1068,7 @@
     "sequences": "Sequenzen",
     "title": "AnyStyle Modell-Training"
   },
+  "training-data-only-parsed-references": "Der Token-Editor ist nur für geparste Referenzen verfügbar. Parsen Sie Referenzen, um Token-Labeling und -Bearbeitung zu aktivieren.",
   "translator": "Übersetzer",
   "type": "Typ",
   "unregistered": "Nicht registriert",
@@ -1080,6 +1085,8 @@
   "valid-description": "Gültig",
   "verification-details": "Verifikationsdetails",
   "verification-failed": "Verifizierung fehlgeschlagen",
+  "verification-help-description": "Source Taster durchsucht Ihre Referenzen in mehreren wissenschaftlichen Datenbanken (Crossref, Semantic Scholar, etc.), um passende Publikationen zu finden. Dann vergleicht es Metadaten wie Titel, Autoren und Publikationsdetails mit dem Damerau-Levenshtein-Algorithmus, um Match-Scores zu berechnen und Ergebnisse als exakte, starke, mögliche oder keine Übereinstimmung zu kategorisieren.",
+  "verification-help-title": "Wie die Verifikation funktioniert",
   "verification-in-progress": "Eine andere Überprüfung läuft bereits",
   "verification-successful": "Verifizierung erfolgreich",
   "verification-with-errors": "{verified}/{total} verifiziert ({errors} Fehler)",
@@ -1089,15 +1096,10 @@
   "verified-references-tooltip": "Referenzen, die erfolgreich einer Quelle zugeordnet werden konnten",
   "verify": "Prüfen",
   "verify-against-website": "Gegen Website prüfen",
+  "verify-extracted-references": "Extrahierte oder geparste Referenzen verifizieren",
   "verify-reference-against-website-description": "Geben Sie eine Website-URL ein, um diese Referenz gegen den Website-Inhalt zu prüfen",
   "verify-references": "Referenzen verifizieren",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verifizieren Sie Referenzen, indem Sie sie in wissenschaftlichen Datenbanken suchen und abgleichen",
-  "processing": "verarbeitet",
-  "processing-references-tooltip": "Referenzen werden gerade gegen akademische Datenbanken verifiziert",
-  "references-processed": "Referenzen verarbeitet",
-  "verify-extracted-references": "Extrahierte oder geparste Referenzen verifizieren",
-  "verification-help-title": "Wie die Verifikation funktioniert",
-  "verification-help-description": "Source Taster durchsucht Ihre Referenzen in mehreren wissenschaftlichen Datenbanken (Crossref, Semantic Scholar, etc.), um passende Publikationen zu finden. Dann vergleicht es Metadaten wie Titel, Autoren und Publikationsdetails mit dem Damerau-Levenshtein-Algorithmus, um Match-Scores zu berechnen und Ergebnisse als exakte, starke, mögliche oder keine Übereinstimmung zu kategorisieren.",
   "verifying": "Verifiziert",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
@@ -1117,6 +1119,5 @@
   "year": "Jahr",
   "year-match": "Jahr-Übereinstimmung",
   "year-suffix": "Jahr-Suffix",
-  "yes": "Ja",
-  "priority": "Priorität"
+  "yes": "Ja"
 }
