--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -21,6 +21,8 @@
   "ai-description": "Enable and configure AI-powered functionality",
   "ai-disclaimer-detailed": "AI-extracted references may contain errors and vary between extractions, which can affect matching scores. Please verify their accuracy before using them in academic work.",
   "ai-extraction": "AI Extraction",
+  "ai-extraction-mode-description": "Free text input and unstructured input is possible as the AI can recognize and extract references automatically from any text format. Extraction time depends on text length and selected AI model/provider.",
+  "ai-extraction-mode-title": "AI Extraction Mode",
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-models": {
@@ -36,6 +38,7 @@
     "gpt-5-mini": "GPT-5 Mini",
     "gpt-5-nano": "GPT-5 Nano"
   },
+  "ai-placeholder-example": "Example (AI can extract from various formats)",
   "ai-settings-api-key-help": "You can get your API key from the provider's platform:",
   "ai-settings-api-key-help-anthropic": "You can get your Anthropic API key from the console:",
   "ai-settings-api-key-help-google": "You can get your Google AI API key from AI Studio:",
@@ -252,28 +255,29 @@
   "exact-match-threshold-example": "95% = scores 95-100% show as green exact matches",
   "exact-match-tooltip": "Exact matches (100%)",
   "example": "Example",
-  "ai-placeholder-example": "Example (AI can extract from various formats)",
-  "parse-placeholder-example": "Example (structured references only)",
   "example-explanation": "In this example, verification will focus 50% on title similarity, 30% on DOI match, and 20% on author similarity. All other fields (year, journal, pages, etc.) are ignored.",
   "example-scenario": "You want to focus only on title and DOI matching, ignoring all other fields",
   "executive-producer": "Executive Producer",
   "expert-settings": "Expert Settings",
   "expert-settings-description": "Configure advanced verification settings and field weights for metadata matching",
   "extract": "Extract",
-  "extract-references": "Extract References",
   "extract-and-verify": "Extract & Verify",
-  "extracting-and-verifying": "Extracting & Verifying",
-  "input-references-for-ai-extraction": "Input references for AI-powered extraction and verification",
-  "input-references-for-ai-extraction-only": "Input references or files for AI-powered extraction",
-  "input-references-as-text-only": "Input references or files for parsing",
-  "input-references-or-files": "Input references or files",
-  "extracting": "Extracting",
+  "extract-references": "Extract References",
   "extracted": "Extracted",
+  "extracting": "Extracting",
+  "extracting-and-verifying": "Extracting & Verifying",
   "extracting-dois": "Extracting DOIs",
   "extracting-dois-description": "Extracting DOIs from the Text. Please wait...",
   "extracting-references": "Extracting References...",
   "extracting-references-description": "Extracting References from the Text...",
   "extraction-academic-information": "Academic Information",
+  "extraction-ai-description": "Control whether to use AI-powered extraction for better accuracy",
+  "extraction-ai-disabled-description": "Fallback to rule-based parsing only - may be less accurate for complex references",
+  "extraction-ai-enabled": "Use AI for extraction",
+  "extraction-ai-enabled-description": "AI will be used to intelligently extract and structure bibliographic metadata from documents",
+  "extraction-ai-fallback-info": "When AI is disabled, the system will use traditional parsing methods. This may result in less accurate extraction for complex or poorly formatted references.",
+  "extraction-ai-no-api-key-description": "AI extraction requires an API key - configure it in AI Settings",
+  "extraction-ai-title": "AI Extraction",
   "extraction-core-metadata": "Core Metadata",
   "extraction-date-information": "Date Information",
   "extraction-deselect-all": "Deselect All",
@@ -332,17 +336,7 @@
   "extraction-publication-details": "Publication Details",
   "extraction-select-all": "Select All",
   "extraction-settings": "Extraction Settings",
-  "extraction-settings-description": "Configure the extraction mode and select which metadata fields should be extracted during document extraction",
-  "search-settings": "Search Settings",
-  "search-settings-description": "Configure database search behavior and priorities for reference verification",
-  "search-settings-title": "Search Settings",
-  "extraction-ai-title": "AI Extraction",
-  "extraction-ai-description": "Control whether to use AI-powered extraction for better accuracy",
-  "extraction-ai-enabled": "Use AI for extraction",
-  "extraction-ai-enabled-description": "AI will be used to intelligently extract and structure bibliographic metadata from documents",
-  "extraction-ai-disabled-description": "Fallback to rule-based parsing only - may be less accurate for complex references",
-  "extraction-ai-no-api-key-description": "AI extraction requires an API key - configure it in AI Settings",
-  "extraction-ai-fallback-info": "When AI is disabled, the system will use traditional parsing methods. This may result in less accurate extraction for complex or poorly formatted references.",
+  "extraction-settings-description": "Configure the extraction mode and select which metadata fields should be extracted during extraction",
   "extraction-technical-details": "Technical Details",
   "extractionSettings": {
     "description": "Field Selection",
@@ -451,6 +445,7 @@
   "field-yearEnd": "Year End",
   "field-yearSuffix": "Year Suffix",
   "fields": "Fields",
+  "file-input-disabled-parse-mode": "File upload is only available in AI extraction mode. Switch to AI mode to upload PDF files.",
   "first-reference-note-number": "First Reference Note Number",
   "flag-problematic": "Flag as problematic",
   "flag-problematic-tooltip": "Mark this reference as potentially problematic",
@@ -500,7 +495,11 @@
   "import-pdf-or-add-references": "Import a PDF file or paste references into the text field to start verification.",
   "in-press": "In Press",
   "in-press-indicator": "in press",
+  "input-references-as-text-only": "Input references or files for parsing",
   "input-references-as-text-or-upload-a-file": "Input references as text or upload a file.",
+  "input-references-for-ai-extraction": "Input references for AI-powered extraction and verification",
+  "input-references-for-ai-extraction-only": "Input references or files for AI-powered extraction",
+  "input-references-or-files": "Input references or files",
   "input-required": "Input required",
   "insert-references": "Insert text with references...",
   "institution": "Institution",
@@ -551,11 +550,11 @@
   "matching-allow-page-variations": "Allow page format variations",
   "matching-enable-fuzzy": "Enable Fuzzy Matching",
   "matching-enable-fuzzy-description": "Allow approximate string matching for text fields",
+  "matching-fields-last-field-tooltip": "At least one matching field must remain enabled with 100% weight",
   "matching-format-variations-title": "Format Variations",
   "matching-fuzzy-settings": "Fuzzy Matching",
   "matching-fuzzy-threshold": "Fuzzy Matching Sensitivity",
   "matching-fuzzy-threshold-description": "Higher values = more strict fuzzy matching (0.1-1.0)",
-  "matching-fields-last-field-tooltip": "At least one matching field must remain enabled with 100% weight",
   "matching-ignore-case": "Ignore case differences",
   "matching-ignore-punctuation": "Ignore punctuation differences",
   "matching-ignore-whitespace": "Ignore whitespace differences",
@@ -716,16 +715,11 @@
   "pages-match": "Pages Match",
   "paragraph-number": "Paragraph Number",
   "parse": "Parse",
+  "parse-mode-description": "Paste your bibliography or reference list into the text area below. For best results, place each citation on its own line. The parser will automatically skip empty lines and process structured references.",
+  "parse-mode-title": "Parse Mode",
+  "parse-placeholder-example": "Example (structured references only)",
   "parse-references": "Parse References",
   "parsing": "Parsing",
-  "parse-mode-title": "Parse Mode",
-  "parse-mode-description": "Paste your bibliography or reference list into the text area below. For best results, place each citation on its own line. The parser will automatically skip empty lines and process structured references.",
-  "ai-extraction-mode-title": "AI Extraction Mode",
-  "ai-extraction-mode-description": "Free text input and unstructured input is possible as the AI can recognize and extract references automatically from any text format. Extraction time depends on text length and selected AI model/provider.",
-  "file-input-disabled-parse-mode": "File upload is only available in AI extraction mode. Switch to AI mode to upload PDF files.",
-  "training-data-only-parsed-references": "Token editor is only available for parsed references. Parse references to enable token labeling and editing.",
-  "token-editor-help-title": "How to Use the Token Editor",
-  "token-editor-help-description": "The parser automatically segments your references (author, title, etc.) using machine learning. Review each segment carefully and correct any errors by clicking on tokens and selecting the correct label from the dropdown. Combine related tokens together - for example, 'in' typically belongs with editor or journal names. Every token must have a label for best results. Your corrections help improve the parser model for everyone.",
   "part": "Part",
   "part-title": "Part Title",
   "partial-verification": "{verified}/{total} verified ({percentage}%)",
@@ -742,6 +736,9 @@
   "possible-match-tooltip": "Possible matches ({possibleThreshold}-{strongThreshold}%)",
   "practical-example": "Practical Example",
   "printing": "Printing",
+  "priority": "Priority",
+  "processing": "processed",
+  "processing-references-tooltip": "References are currently being verified against academic databases",
   "producer": "Producer",
   "provider": "Provider",
   "publication-date": "Publication Date",
@@ -763,6 +760,7 @@
   "reference-score-title": "Best Match Score",
   "references": "References",
   "references-count": "{count} references",
+  "references-processed": "references processed",
   "registered": "Registered",
   "reload-page-auto-import": "Reload the page to automatically find and import references",
   "remove-file-to-enable-text-input": "Remove file to enable text input",
@@ -776,8 +774,8 @@
   "restart-verification": "Restart verification",
   "retrieval-date": "Retrieval Date",
   "retry": "Retry",
-  "review-and-relabel-parsed-references-by-clicking-on-tokens": "Review and relabel parsed references by clicking on tokens.",
   "review-and-relabel-parsed-references": "Review and relabel parsed references",
+  "review-and-relabel-parsed-references-by-clicking-on-tokens": "Review and relabel parsed references by clicking on tokens.",
   "reviewed-author": "Reviewed Author",
   "reviewed-genre": "Reviewed Genre",
   "reviewed-title": "Reviewed Title",
@@ -794,6 +792,9 @@
   "search-on-web": "Search the internet for this reference",
   "search-on-web-tooltip": "",
   "search-references": "Search references",
+  "search-settings": "Search Settings",
+  "search-settings-description": "Configure database search behavior and priorities for reference verification",
+  "search-settings-title": "Search Settings",
   "season": "Season",
   "sec": "sec",
   "section": "Section",
@@ -952,6 +953,8 @@
   "title": "Title",
   "title-match": "Title Match",
   "title-short": "Title (Short)",
+  "token-editor-help-description": "The parser automatically segments your references (author, title, etc.) using machine learning. Review each segment carefully and correct any errors by clicking on tokens and selecting the correct label from the dropdown. Combine related tokens together - for example, 'in' typically belongs with editor or journal names. Every token must have a label for best results. Your corrections help improve the parser model for everyone.",
+  "token-editor-help-title": "How to Use the Token Editor",
   "token-relabeling": {
     "changeLabelFor": "Change label for",
     "changesCount": "Changes Made",
@@ -966,12 +969,12 @@
   },
   "tokens-per-minute": "Tokens per minute",
   "tokens-per-minute-description": "This is the limit of AI tokens per minute",
-  "tooltip-ai-turn-off": "Turn off AI extraction",
-  "tooltip-ai-turn-on": "Turn on AI extraction",
-  "tooltip-ai-no-api-key": "AI extraction is not available - API key required",
   "tooltip-abstract": "Brief summary of the publication's content (e.g. 'This study examines...')",
   "tooltip-accepted": "Date when the manuscript was accepted for publication (e.g. '2024-03-15')",
   "tooltip-advisor": "Academic advisor or supervisor (e.g. 'Prof. Dr. Schmidt')",
+  "tooltip-ai-no-api-key": "AI extraction is not available - API key required",
+  "tooltip-ai-turn-off": "Turn off AI extraction",
+  "tooltip-ai-turn-on": "Turn on AI extraction",
   "tooltip-approximateDate": "Approximate publication date (e.g. 'ca. 2023')",
   "tooltip-articleNumber": "Unique article number (e.g. 'e2024001' in electronic journals)",
   "tooltip-arxiv-id": "arXiv identifier for preprints and scientific papers (e.g. '2024.01234')",
@@ -1065,6 +1068,7 @@
     "sequences": "sequences",
     "title": "AnyStyle Model Training"
   },
+  "training-data-only-parsed-references": "Token editor is only available for parsed references. Parse references to enable token labeling and editing.",
   "translator": "Translator",
   "type": "Type",
   "unregistered": "Unregistered",
@@ -1081,6 +1085,8 @@
   "valid-description": "Valid",
   "verification-details": "Verification Details",
   "verification-failed": "Verification failed",
+  "verification-help-description": "Source Taster searches your references across multiple academic databases (Crossref, Semantic Scholar, etc.) to find matching publications. It then compares metadata like title, authors, and publication details using the Damerau-Levenshtein algorithm to calculate match scores and categorize results as exact, strong, possible, or no match.",
+  "verification-help-title": "How Verification Works",
   "verification-in-progress": "Another verification is in progress",
   "verification-successful": "Verification successful",
   "verification-with-errors": "{verified}/{total} verified ({errors} errors)",
@@ -1090,15 +1096,10 @@
   "verified-references-tooltip": "References that were successfully matched to a source",
   "verify": "Verify",
   "verify-against-website": "Verify against website",
+  "verify-extracted-references": "Verify extracted or parsed references",
   "verify-reference-against-website-description": "Enter a website URL to verify this reference against the website content",
   "verify-references": "Verify References",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verify references by searching and matching them to entries in scholarly databases.",
-  "processing": "processed",
-  "processing-references-tooltip": "References are currently being verified against academic databases",
-  "references-processed": "references processed",
-  "verify-extracted-references": "Verify extracted or parsed references",
-  "verification-help-title": "How Verification Works",
-  "verification-help-description": "Source Taster searches your references across multiple academic databases (Crossref, Semantic Scholar, etc.) to find matching publications. It then compares metadata like title, authors, and publication details using the Damerau-Levenshtein algorithm to calculate match scores and categorize results as exact, strong, possible, or no match.",
   "verifying": "Verifying",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
@@ -1118,6 +1119,5 @@
   "year": "Year",
   "year-match": "Year Match",
   "year-suffix": "Year Suffix",
-  "yes": "Yes",
-  "priority": "Priority"
+  "yes": "Yes"
 }
