fix: enhance ReportSection component with AI and manual verification states; remove IdleState and NoResultsState components; update localization files for new verification messages

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -1101,6 +1101,10 @@
   "verify-references": "Referenzen verifizieren",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verifizieren Sie Referenzen, indem Sie sie in wissenschaftlichen Datenbanken suchen und abgleichen",
   "verifying": "Verifiziert",
+  "ai-auto-verification-title": "KI-extrahierte Referenzen werden automatisch verifiziert",
+  "ai-auto-verification-text": "Sobald die KI Ihre Referenzen extrahiert hat, startet die Verifikation automatisch. Anschließend können Sie Treffer filtern und Ergebnisse nachbessern.",
+  "manual-verification-title": "Referenzen hinzufügen, um die Verifikation zu starten",
+  "manual-verification-text": "Fügen Sie Ihre Referenzen ein und klicken Sie auf „Parsen“. Danach können Sie sie hier verifizieren.",
   "verifying-reference-current": "Überprüfe: {reference}",
   "verifying-references-progress": "Überprüfe Referenzen ({current}/{total})",
   "version": "Version",
