--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -1101,6 +1101,10 @@
   "verify-references": "Verify References",
   "verify-references-by-searching-and-matching-them-to-entries-in-scholarly-databases": "Verify references by searching and matching them to entries in scholarly databases.",
   "verifying": "Verifying",
+  "ai-auto-verification-title": "AI-extracted references are verified automatically",
+  "ai-auto-verification-text": "Once the AI extracts your references, verification runs automatically. You can then filter matches and adjust results.",
+  "manual-verification-title": "Add references to start verification",
+  "manual-verification-text": "Paste your references and click 'Parse'. Then verify them here.",
   "verifying-reference-current": "Verifying: {reference}",
   "verifying-references-progress": "Verifying references ({current}/{total})",
   "version": "Version",
